[gd_scene load_steps=34 format=3 uid="uid://b6gsk484p463g"]

[ext_resource type="PackedScene" uid="uid://bwk6bh0chqfbe" path="res://Enemies/enemy.tscn" id="1_exhc3"]
[ext_resource type="Texture2D" uid="uid://vkg5enm68tud" path="res://effects (new)/enemy_afterdead_explosion_anim_spritesheet.png" id="2_0eqn6"]
[ext_resource type="Script" path="res://Enemies/Goblin/goblin.gd" id="2_x3goy"]
[ext_resource type="Script" path="res://Enemies/Goblin/goblinFSM.gd" id="3_l2k2q"]
[ext_resource type="Texture2D" uid="uid://53q6bub54ttp" path="res://Arts/enemies/goblin/goblin_idle_spritesheet.png" id="3_pncwn"]
[ext_resource type="Texture2D" uid="uid://blx84b00ljmrp" path="res://Arts/enemies/goblin/goblin_run_spritesheet.png" id="4_esm14"]
[ext_resource type="Script" path="res://Hitbox.gd" id="7_mviyd"]
[ext_resource type="AudioStream" uid="uid://d01u7qct01dba" path="res://Music/SE/10_Battle_SFX/77_flesh_02.wav" id="8_l2jvf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pawrd"]
atlas = ExtResource("2_0eqn6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgqa8"]
atlas = ExtResource("2_0eqn6")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvifw"]
atlas = ExtResource("2_0eqn6")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycayt"]
atlas = ExtResource("2_0eqn6")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rldpb"]
atlas = ExtResource("3_pncwn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_56pmd"]
atlas = ExtResource("3_pncwn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4aek"]
atlas = ExtResource("3_pncwn")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q24er"]
atlas = ExtResource("3_pncwn")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fnyx"]
atlas = ExtResource("3_pncwn")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_52iwc"]
atlas = ExtResource("3_pncwn")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_18w54"]
atlas = ExtResource("4_esm14")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6srq"]
atlas = ExtResource("4_esm14")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cekgc"]
atlas = ExtResource("4_esm14")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnno5"]
atlas = ExtResource("4_esm14")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_67sr0"]
atlas = ExtResource("4_esm14")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dohj"]
atlas = ExtResource("4_esm14")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_667pq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pawrd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgqa8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvifw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycayt")
}],
"loop": true,
"name": &"explosion",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rldpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56pmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4aek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q24er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fnyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52iwc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18w54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6srq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cekgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnno5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67sr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dohj")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dp1fe"]
radius = 5.0
height = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ll76x"]
radius = 6.98709

[sub_resource type="Animation" id="Animation_f3hlc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimatedSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("../AnimatedSprite2D:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("..:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../AnimatedSprite2D:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4pqew"]
resource_name = "dead"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(100, 100, 100, 1), Color(1, 1, 1, 1), Color(100, 100, 100, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"idle", &"explosion"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimatedSprite2D:rotation")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.523599, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../AnimatedSprite2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}

[sub_resource type="Animation" id="Animation_3ksis"]
resource_name = "hurt"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.261799, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(100, 100, 100, 1), Color(1, 1, 1, 1), Color(100, 100, 100, 1), Color(1, 1, 1, 1), Color(100, 100, 100, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, false]
}

[sub_resource type="Animation" id="Animation_cprop"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_ytmxf"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_711lp"]
_data = {
"RESET": SubResource("Animation_f3hlc"),
"dead": SubResource("Animation_4pqew"),
"hurt": SubResource("Animation_3ksis"),
"idle": SubResource("Animation_cprop"),
"walk": SubResource("Animation_ytmxf")
}

[node name="goblin" instance=ExtResource("1_exhc3")]
texture_filter = 1
collision_mask = 13
script = ExtResource("2_x3goy")
projectile_speed = 150
max_hp = 1
hp = 1
accerelation = 30
max_speed = 100

[node name="FiniteStateMachine" parent="." index="0"]
script = ExtResource("3_l2k2q")

[node name="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_667pq")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_dp1fe")

[node name="Hitbox" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 2
script = ExtResource("7_mviyd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0.503376, -0.529732)
shape = SubResource("CircleShape2D_ll76x")
debug_color = Color(0.992157, 0, 0, 0.419608)

[node name="AnimationPlayer" parent="." index="4"]
libraries = {
"": SubResource("AnimationLibrary_711lp")
}

[node name="PathTimer" parent="." index="5"]
wait_time = 0.1

[node name="NavigationAgent2D" parent="." index="6"]
path_desired_distance = 40.0
target_desired_distance = 30.0
path_max_distance = 300.0
path_postprocessing = 1
avoidance_enabled = true
radius = 100.0
neighbor_distance = 300.0
max_neighbors = 8
time_horizon_agents = 0.5
time_horizon_obstacles = 0.5

[node name="AttackTimer" type="Timer" parent="." index="7"]
wait_time = 5.0
one_shot = true

[node name="AimRayCast" type="RayCast2D" parent="." index="8"]
collision_mask = 9

[node name="ThrowSE" type="AudioStreamPlayer" parent="." index="9"]
stream = ExtResource("8_l2jvf")
volume_db = 5.0
pitch_scale = 0.8

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
